# API-Commerce

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  schema.yaml
_APICommerce/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: models.py  permissions.py  serializers.py  urls.py  views.py
accounts/management/commands/: create_admin.py
accounts/migrations/: 0001_initial.py
addresses/: models.py  permissions.py  serializers.py  urls.py  views.py
addresses/migrations/: 0001_initial.py  0002_rename_account_address_user.py
api_commerce/: asgi.py  settings.py  urls.py  wsgi.py
carts/: exceptions.py  models.py  permissions.py  serializers.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_cart_account_cart_products.py  0003_alter_cart_account.py  0004_rename_account_cart_user.py
orders/: email.py  models.py  permissions.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_options_order_account_order_created_at_and_more.py  0003_remove_order_products.py  0004_order_products.py  0005_remove_order_products.py  0006_order_products.py  0007_remove_order_account_order_user.py
products/: models.py  permissions.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_options_product_account_product_name_and_more.py  0003_product_category.py  0004_rename_account_product_seller.py  0005_product_in_stock.py  0006_alter_product_in_stock.py
